--- a/self_project_for_frontend/package.json
+++ b/self_project_for_frontend/package.json
@@ -3,5 +3,16 @@
     "axios": "^1.7.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2"
-  }
+  },
+  "name": "self_project_for_frontend",
+  "version": "1.0.0",
+  "main": "app.js",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
